# thatgeeman-python-and-kafka-lp

./: README.md  docker-Kafka-commands.txt  docker-compose.yml  pyproject.toml  saved_page.html
python/manning-scrape/: pyproject.toml
python/manning-scrape/manning_scrape/: scrape.py
python/manning-scrape/tests/: test_manning_scrape.py
python/pg-data/: insert-record.py  pyproject.toml  read-db.py  update-record.py
src/: faust_app.py  main.py
