[tool.poetry]
name = "python-kafka"
version = "0.1.0"
description = ""
authors = ["thatgeeman <thatgeeman@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
requests = "^2.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
