[tool.poetry]
name = "manning-scrape"
version = "0.1.0"
description = ""
authors = ["Rob Koch <rob.koch@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
